--- a/index.html
+++ b/index.html
@@ -63,8 +63,7 @@
       </section>
     </section>
 
-
-    <section class="right">
+    <section class="mid-right">
 
       <section class="blog">
         <div class="blog-top">
@@ -81,8 +80,43 @@
         <span class="blog-link">dev.to</span>
       </section>
 
+      <section class="expeciences">
+        <h3 class="h3-experiences">Experiences</h3>
+        <div class="exp">
+          <div><img class="exp-img img-adi" src="./images/adidas.svg"></div>
+          <div class="exp-left">
+            <span class="date">Feb 2017 - Current</span>
+            <p class="job">Front-end developer</p>
+            <p class="job-desc">Donec aliquam est dui, vel vestibulum diam sollicitudin id. Quisque feugiat malesuada molestie.</p>
+          </div>
+        </div>
+        <!-- --h&m-- -->
+        <div class="exp xp-two">
+          <div><img class="exp-img img-h&m" src="./images/h&m.svg"></div>
+          <div class="exp-left">
+            <span class="date">Aug 2016 - Feb 2018</span>
+            <p class="job">Full-stack developer</p>
+            <p class="job-desc">Donec aliquam est dui, vel vestibulum diam sollicitudin id. Quisque feugiat malesuada molestie.</p>
+          </div>
+        </div>
+      </section>
+
     </section>
   </section>
   
+  <section class="bot">
+    <section class="projects">
+      <h3 class="h3-projects">Projects (3)</h3>
+      <div class="tech-section">
+        <span class="whit">React</span>
+        <span class="whit">Vue</span>
+        <span class="whit">Responsive</span>
+      </div>
+    </section>
+
+    <section class="card-projects">
+
+    </section>
+  </section>
 </body>
 </html>
