--- a/index.html
+++ b/index.html
@@ -61,6 +61,28 @@
           </div>
         </div>
       </section>
+
+      <section class="hobbies">
+        <h3 class="h3-hobbies">HOBBIES</h3>
+        <section class="hobbie">
+          <img class="hob-img" src="./images/gaming.png" alt="gaming">
+          <span class="hob-title">Gaming</span>
+          <p class="hob-description">Quisque feugiat malesuada molestie.</p>
+        </section>
+
+        <section class="hobbie h-m">
+          <img class="hob-img" src="./images/cooking.png" alt="cooking">
+          <span class="hob-title">Cooking</span>
+          <p class="hob-description">Quisque feugiat malesuada molestie.</p>
+        </section>
+
+        <section class="hobbie">
+          <img class="hob-img" src="./images/biking.png" alt="biking">
+          <span class="hob-title">Biking</span>
+          <p class="hob-description">Quisque feugiat malesuada molestie.</p>
+        </section>
+
+      </section>
     </section>
 
     <section class="mid-right">
