--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
           <div class="contact">
             <div class="email">
               <img class="icon" src="./images/icon1.svg">
-              <p>billy@example.com</p>
+              <span>billy@example.com</span>
             </div>
             <div class="phone">
               <img class="icon" src="./images/icon2.svg">
-              <p>(+603) 546 624 342</p>
+              <span>(+603) 546 624 342</sapn>
             </div>
           </div>
         </div>
@@ -137,8 +137,52 @@
     </section>
 
     <section class="card-projects">
+      <section class="card">
+        <img class="img-project" src="./images/recipe.png" alt="recipe">
+        <div class="tags">
+          <span class="tag">#HTML</span>
+          <span class="tag">#CSS</span>
+          <span class="tag">#responsive</span>
+        </div>
+        <h4>Recipe Blog</h4>
+        <p class="card-text">In this project, I work with HTML and CSS to create a responsive page. This page is similiar with a page. The design is from devchallenge.io</p>
+        <div class="buttons">
+          <a a class="card-button cd-blue" href="#">Demo</a>
+          <a a class="card-button cd-white" href="#">Code</a>
+        </div>
+      </section>
 
+      <section class="card">
+        <img class="img-project" src="./images/gallery.png" alt="recipe">
+        <div class="tags">
+          <span class="tag">#HTML</span>
+          <span class="tag">#CSS</span>
+          <span class="tag">#responsive</span>
+        </div>
+        <h4>My Gallery</h4>
+        <p class="card-text">In this project, I work with HTML and CSS to create a responsive page. This page is similiar with instagram profile page. The design is from devchallenge.io</p>
+        <div class="buttons">
+          <a a class="card-button cd-blue"" href="#">Demo</a>
+          <a a class="card-button cd-white"" href="#">Code</a>
+        </div>
+      </section>
+
+      <section class="card">
+        <img class="img-project" src="./images/checkout.png" alt="recipe">
+        <div class="tags">
+          <span class="tag">#HTML</span>
+          <span class="tag">#CSS</span>
+          <span class="tag">#responsive</span>
+        </div>
+        <h4>Checkout</h4>
+        <p class="card-text">In this project, I work with HTML and CSS to create a responsive page. This page is similiar with a page. The design is from devchallenge.io</p>
+        <div class="buttons">
+          <a class="card-button cd-blue" href="#">Demo</a>
+          <a class="card-button cd-white" href="#">Code</a>
+        </div>
+      </section>
     </section>
-  </section>
+
+  <p class="created">created by <a class="iam" href="https://github.com/villalb4" target="_blank">villalb4</a> - devChallenges.io</p>
 </body>
 </html>
