--- a/index.html
+++ b/index.html
@@ -181,7 +181,21 @@
           <a class="card-button cd-white" href="#">Code</a>
         </div>
       </section>
+
     </section>
+
+    <section class="pages">
+      <div class="page-div">
+        <span class="page"><</span>
+        <span class="page">1</span>
+        <span class="page">2</span>
+        <span class="page">3</span>
+        <span class="page-dots">...</span>
+        <span class="page page-ten">10</span>
+        <span class="page">></span>
+      </div>
+    </section>
+  </section>
 
   <p class="created">created by <a class="iam" href="https://github.com/villalb4" target="_blank">villalb4</a> - devChallenges.io</p>
 </body>
