--- a/index.html
+++ b/index.html
@@ -147,8 +147,8 @@
         <h4>Recipe Blog</h4>
         <p class="card-text">In this project, I work with HTML and CSS to create a responsive page. This page is similiar with a page. The design is from devchallenge.io</p>
         <div class="buttons">
-          <a a class="card-button cd-blue" href="#">Demo</a>
-          <a a class="card-button cd-white" href="#">Code</a>
+          <a class="card-button cd-blue" href="#">Demo</a>
+          <a class="card-button cd-white" href="#">Code</a>
         </div>
       </section>
 
